src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <formula>IF (  ContactId != null,   TEXT( Contact.Account.Focus_Account__c ) , TEXT( Lead.LeanData__Reporting_Matched_Account__r.Focus_Account__c)   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Account_Name__c</fullName>
        <formula>IF ( ContactId != null, ( Contact.Account.Name ) , ( Lead.LeanData__Reporting_Matched_Account__r.Name ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LD Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <formula>IF ( ContactId != null, TEXT( Contact.Account.Named_Account__c ) , TEXT( Lead.LeanData__Reporting_Matched_Account__r.Named_Account__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account?</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>